# plugins

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_plugin.py  history_to_submodules.sh
.archive/calculator_exprtk/: CMakeLists.txt  metadata.json
.archive/calculator_muparser/: CMakeLists.txt  muparser.qrc
.archive/firefoxbookmarks/: CMakeLists.txt  firefoxbookmarks.qrc
applications/: CMakeLists.txt  README.md  metadata.json
applications/i18n/: applications.ts  applications_de.ts  applications_en.ts
applications/src/: applicationbase.cpp  applicationbase.h  configwidget.cpp  configwidget.h  configwidget.ui  configwidget_mac.ui  configwidget_xdg.ui  extension.cpp  extension.h  plugin.cpp  plugin.h  plugin_mac.mm  plugin_xdg.cpp  pluginbase.cpp  pluginbase.h
applications_macos/: CMakeLists.txt  metadata.json
applications_macos/i18n/: applications_macos_de.ts
applications_macos/src/: plugin.h  plugin.mm
bravebookmarks/: CMakeLists.txt  metadata.json
bravebookmarks/src/: configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h
calculator/: CMakeLists.txt  README.md  calculator.qrc  configwidget.ui  metadata.json
calculator/src/: configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h  plugin.cpp  plugin.h
calculator_muparser/: CMakeLists.txt  README.md
calculator_muparser/src/: configwidget.ui  plugin.cpp  plugin.h
calculator_qalculate/: CMakeLists.txt  README.md  calculator_qalculate.qrc  metadata.json  qalculate.qrc
calculator_qalculate/i18n/: calculator_qalculate.ts  calculator_qalculate_de.ts  calculator_qalculate_en.ts
calculator_qalculate/src/: configwidget.ui  plugin.cpp  plugin.h
chromebookmarks/: CMakeLists.txt  README.md
chromebookmarks/src/: configwidget.cpp  configwidget.h  extension.cpp  extension.h
chromium/: CMakeLists.txt  chromium.qrc  metadata.json
chromium/i18n/: chromium.ts  chromium_de.ts
chromium/src/: bookmarkitem.cpp  bookmarkitem.h  configwidget.ui  extension.cpp  extension.h  plugin.cpp  plugin.h
contacts_macos/: CMakeLists.txt  metadata.json
contacts_macos/i18n/: contacts_macos.ts  contacts_macos_de.ts
contacts_macos/src/: plugin.h  plugin.mm
dictionary/: CMakeLists.txt  dictionary.qrc  metadata.json
dictionary/i18n/: dictionary.ts  dictionary_de.ts  dictionary_en.ts  dictionary_macos_de.ts
dictionary/src/: plugin.h  plugin.mm
docs/: CMakeLists.txt  metadata.json
docs/i18n/: docs.ts  docs_de.ts
docs/src/: configwidget.cpp  configwidget.h  configwidget.ui  docitem.cpp  docitem.h  docset.cpp  docset.h  plugin.cpp  plugin.h
externalextensions/: CMakeLists.txt  configwidget.ui  metadata.json
externalextensions/src/: configwidget.cpp  configwidget.ui  extension.cpp  extension.h  externalextension.cpp  externalextension.h  externalextensionmodel.cpp  externalextensionmodel.h
files/: CMakeLists.txt  README.md  metadata.json
files/i18n/: files.ts  files_de.ts
files/src/: configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h  file.cpp  file.h  fileactions.cpp  filebrowsers.cpp  filebrowsers.h  fileitems.cpp  fileitems.h  fsindex.cpp  fsindex.h  fsindexnodes.cpp  fsindexnodes.h  fsindexpath.cpp  fsindexpath.h  indexfile.cpp  indexfile.h  indextreenode.cpp  indextreenode.h  mimefilterdialog.cpp  mimefilterdialog.h  mimefilterdialog.ui  mimetypedialog.cpp  mimetypedialog.h  mimetypedialog.ui  namefilterdialog.cpp  namefilterdialog.h  namefilterdialog.ui  plugin.cpp  plugin.h  standardfile.cpp  standardfile.h
files/test/: test.cpp  test.h
files/translations/: files_de.ts
github/: CMakeLists.txt  metadata.json
github/src/: configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h
menubar/: CMakeLists.txt  metadata.json
menubar/i18n/: menubar_de.ts  menubar_en.ts
menubar/src/: plugin.h  plugin.mm
mpris/: CMakeLists.txt  metadata.json  mpris.xml
mpris/i18n/: mpris.ts  mpris_de.ts  mpris_en.ts
mpris/src/: command.cpp  command.h  configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h  item.cpp  item.h  player.h  plugin.cpp  plugin.h
platform_macos/: CMakeLists.txt  metadata.json  platform_macos.qrc
platform_macos/src/: configwidget.ui  plugin.h  plugin.mm
python/: .gitignore  CMakeLists.txt  README.md  albert.pyi  metadata.json  python.qrc  setup.py
python/albert/: __init__.py  __init__.pyi
python/i18n/: python.ts  python_de.ts
python/src/: cast_specialization.h  cast_specialization.hpp  config.h.in  configwidget.cpp  configwidget.h  configwidget.ui  embeddedmodule.cpp  embeddedmodule.h  embeddedmodule.hpp  extension.cpp  extension.h  modulesmodel.cpp  modulesmodel.h  plugin.cpp  plugin.h  pypluginloader.cpp  pypluginloader.h  pythonmodulev1.cpp  pythonmodulev1.h  trampolineclasses.h  trampolineclasses.hpp
python/test/: test.cpp  test.h
qalculate/: CMakeLists.txt  FindQalculate.cmake  metadata.json
qalculate/src/: configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp
qmlboxmodel/: CMakeLists.txt  metadata.json  qmlboxmodel.qrc
qmlboxmodel/i18n/: qmlboxmodel_de.ts
qmlboxmodel/src/: colordialog.hpp  configwidget.cpp  configwidget.h  configwidget.ui  frontendplugin.cpp  frontendplugin.h  imageprovider.cpp  imageprovider.h  mainwindow.cpp  mainwindow.h  plugin.cpp  plugin.h  propertyeditor.cpp  propertyeditor.h  qmlinterface.cpp  window.cpp  window.h
sparkle_updater/: CMakeLists.txt  metadata.json
sparkle_updater/cmake/: FindSparkle.cmake
sparkle_updater/i18n/: sparkle_updater_de.ts
sparkle_updater/src/: configwidget.ui  plugin.h
template/: CMakeLists.txt
template/src/: configwidget.ui  plugin.cpp  plugin.h
virtualbox/: CMakeLists.txt  metadata.json
virtualbox/src/: configwidget.cpp  configwidget.h  extension.cpp  extension.h  (+4 more)
vpn/: CMakeLists.txt  README.md  metadata.json  vpn.qrc
widgetboxmodel/: CMakeLists.txt  metadata.json
widgetsboxmodel/: ArcTemplate.qss  ArcTemplate.sh  CMakeLists.txt  README.md  SpotlightTemplate.qss  SpotlightTemplate.sh  StandardThemeTemplate.qss  StandardThemeTemplate.sh  metadata.json
(+569 files in other folders)
